2004-03-30  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ClassScout/ClassScout.cs: stop using Gdk.Threads.Enter and
	.Leave, as they can cause deadlocks, using a GLib.IdleHandler instead.
	Closes bug #56260

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Gui/Pads/ClassScout/ClassScout.cs: partial fix to bug with double
	clicking not setting focus properly.

2004-03-29  Todd Berman  <tberman@sevenl.net>

	* Commands/RunCommands.cs: When you run, you need to make sure the
	compile completed properly.
	* Gui/Workbench/Layouts/SdiWorkspaceWindow.cs: Mark file/project dirty
	if it becomes dirty, relying on unsaved files is not acceptable.

2004-03-28  Todd Berman  <tberman@sevenl.net>

	* Services/ParserService/DefaultParserService.cs: re-add try catch to
	prevent exceptions from percolating up and blowing up. closes bug
	#56128

2004-03-28  John Luke  <jluke@cfl.rr.com>

	* Services/ParserService/DefaultParserService.cs:
	if filename == null don't switch on it
	* Gui/Pads/TerminalPad.cs: add but dont build yet

2004-03-27  Todd Berman  <tberman@sevenl.net>

	* Commands/FileCommands: remove save as notification, as its useless
	closes bug #56126

2004-03-27  Todd Berman  <tberman@sevenl.net>

	* Internal/Parser/*: update to new parser from upstream.
	* Gui/ContentInterfaces/IParseInformationListener.cs: update.
	* Gui/Pads/ClassScout/NodeBuilder/DefaultDotNetClassScoutNodeBuilder.cs:
		rework to use SortUtilities and a TreeNodeComparer for removal
		this should fix 99% of those strange class browser bugs.
	* Gui/CompletionDatabaseWizard/CreateDBGenerator.cs:
		update to reflect new parser changes.
	* Services/ParserService/*: update from upstream, add some of our mods
	* Services/ProjectService/ParseInformationEventHandler.cs:
	* Services/ClassBrowserIcons/ClassBrowserIconsService.cs:
	* Services/AmbienceService/*:
	* Commands/AutostartCommands.cs: update to reflect other changes.
	* Makefile.am: update with new files.

2004-03-26  John Luke  <jluke@cfl.rr.com>
