@@ -1,3 +1,8 @@
+2004-03-31  John Luke  <jluke@cfl.rr.com>
+
+	* Commands/ProjectBrowserCommands/FolderNodeCommands.cs:
+	use stock buttons and put the MessageDialog in a using {}	
+
 2004-03-30  Todd Berman  <tberman@sevenl.net>
 
 	* Gui/Pads/ClassScout/ClassScout.cs: stop using Gdk.Threads.Enter and
